--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -53,7 +53,7 @@
 }
 .projects_photo img {
   transition: all 0.6s ease-out;
-  width: 450px;
+  max-width: 450px;
   object-fit: cover;
   z-index: -2;
   -webkit-transition: all 0.6s ease-out;
