--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -42,7 +42,7 @@
             />
           </button>
         </div>
-        <div id="menuP2" class="visible menu_p2">
+        <div id="menuP2" class="visible projects_menu_p2">
           <h1 class="h1_menu name orange">Aarón Curro Solla</h1>
           <h4 class="h3_menu">Web Developer & Programmer</h4>
         </div>
