Se modifica el about con los proyectos

--- a/views/aboutMe.ejs
+++ b/views/aboutMe.ejs
@@ -275,14 +275,14 @@
                 </a>
               </div>
               <div class="about_projects_pro">
-                <img src="./images/projects/freelancer.png" alt="" />
+                <img src="./images/projects/FrontEndMentor2.png" alt="" />
                 <a
-                  href="https://github.com/acurro9/firstpage"
+                  href="https://acurro9.github.io/FrontEnd_Mentor_Projects/index.html"
                   target="_blank"
                   class="about_projects_link"
                 >
                   <img src="./images/icons/github.svg" alt="" />
-                  <p>Freelancer</p>
+                  <p>FrontEnd Mentor</p>
                 </a>
               </div>
             </div>
